--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -2,15 +2,34 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
-    background-color: #f5f5f5;
+    padding: 0 2rem;
+    background: linear-gradient(90deg, #19376d 0%, rgba(25, 55, 109, 0) 170%);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    /* top: 0; */
 }
 .navbar .logo{
+
    width: 100px;
    height: 100px;
+   margin: 0.2rem 2rem;
 }
 nav ul{
     display: flex;
     list-style: none;
+}
+nav ul li a{
+    display: block;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.5rem 1rem;
+    margin-right: 0 8.5rem;
+    border-radius: 0.5rem;
+    color: white;
+}
+nav ul li a:not(.active):hover{
+    transition: all 0.3s ease;
+    transform: scale(1.1);
+    background-color: hsla(244, 51%, 42%, 0.87);
 }
